# WIMBYmapLULC

./: .gitignore  LICENSE  README.md  infotext,md  pyproject.toml  wimbymaplulc.py
test/: austria_alpine.geojson  austria_flat.geojson  bulgaria.geojson  doggerbank.geojson  germany_test1.geojson  pantelleria.geojson  scotland.geojson  spain.geojson
windlulc/: __init__.py  windlulc.py  windlulc.yaml
windlulc/data/: CLC.xlsx  README.md  bufferpolys.feather  concave.feather  convex.feather  turbines.feather
