[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "windlulc"
version = "2025.02.06"
dependencies = [
    "pandas",
    "openpyxl",
    "pyarrow",
    "numpy",
    "geopandas",
    "scipy",
    "shapely",
    "pyyaml",
    "rasterio",
]
requires-python = ">=3.10"
authors = [{ name = "Christian Mikovits" }, { name = "Thomas Öberseder" }]
maintainers = [{ name = "Christian Mikovits" }, { name = "Thomas Öberseder" }]
description = "Land Use and Land Cover Analysis plugin for the WIMBYmap"
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 1 - Alpha",
    "Programming Language :: Python",
]

[tool.setuptools]
packages = ["windlulc"]
include-package-data = true

#[tool.setuptools.package-data]
#"wimby_lca.data" = ["*.csv"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
windlulc = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
