[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
classifiers = [
    "Development Status :: 5 - Production/Stable"
    "Programming Language :: Python",
]
name = "windlulc"
version = "2025.08.12"
dependencies = [
    "pyarrow",
    "json",
    "typing",
    "pandas",
    "numpy",
    "geopandas",
    "scipy",
    "shapely",
    "pyyaml",
    "rasterio",
    "openpyxl",
]
requires-python = ">=3.10"
authors = [{ name = "Christian Mikovits" }, { name = "Thomas Öberseder" }]
maintainers = [{ name = "Christian Mikovits" }, { name = "Thomas Öberseder" }]
description = "Land Use and Land Cover Analysis plugin for the WIMBYmap"
readme = "README.md"
license = { file = "LICENSE" }

[tool.setuptools]
packages = ["windlulc"]
include-package-data = true

[tool.setuptools.package-data]
"windlulc" = ["windlulc.yaml", "data/*.feather", "data/CLC.xlsx"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
windlulc = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
